--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Creme — Recipes</title>
+  <title>Gaby's Menu</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -121,12 +121,21 @@
   <div class="app">
     <!-- ===== Sidebar ===== -->
     <aside class="sidebar">
-      <div class="logo">CRE·ME</div>
+      <div class="logo">Gaby's Menu</div>
       <div class="side-nav">
-        <button class="side-btn active" title="Home" aria-label="Home">🏠</button>
-        <button class="side-btn" title="Search" aria-label="Search">🔎</button>
-        <button class="side-btn" title="The App" aria-label="The App">📱</button>
-        <button class="side-btn" title="Collections" aria-label="Collections">📚</button>
+        <button class="side-btn active" title="Home" aria-label="Home">Home</button>
+        <button class="side-btn" title="Search" aria-label="Search">Search</button>
+        <button class="side-btn" title="The App" aria-label="The App">Videos</button>
+
+        <ul class="social-list">
+          
+        <li class="social-item">
+            <a href="https://github.com/gdelcsan/" class="social-link">
+              <ion-icon name="logo-github"></ion-icon>
+            </a>
+          </li>
+      </ul>
+        
       </div>
       <div class="side-spacer"></div>
       <div class="side-small">EN</div>
