--- a/index.html
+++ b/index.html
@@ -123,22 +123,22 @@
     <aside class="sidebar">
       <div class="logo">Gaby's Menu</div>
       <div class="side-nav">
-        <button class="side-btn active" title="Home" aria-label="Home">Home</button>
-        <button class="side-btn" title="Search" aria-label="Search">Search</button>
-        <button class="side-btn" title="The App" aria-label="The App">Videos</button>
+        <button class="side-btn transparent" title="Home" aria-label="Home">Home</button>
+        <button class="side-btn transparent" title="Search" aria-label="Search">Search</button>
+        <button class="side-btn transparent" title="The App" aria-label="The App">Videos</button>
 
         <ul class="social-list">
           
         <li class="social-item">
-            <a href="https://github.com/gdelcsan/" class="social-link">
-              <ion-icon name="logo-github"></ion-icon>
+            <a href="#" class="social-link">
+              <ion-icon name="logo-tiktok"></ion-icon>
             </a>
           </li>
       </ul>
         
       </div>
       <div class="side-spacer"></div>
-      <div class="side-small">EN</div>
+      <div class="side-small" id="lang-toggle">EN</div>
     </aside>
 
     <!-- ===== Header ===== -->
