--- a/index.html
+++ b/index.html
@@ -311,6 +311,13 @@
       heroTitle: "Moqueca de Palmito y Plátano",
       chipForYou: "Para ti",
       chipQuick: "Rápido",
+      chipMeals: "Platos",
+      chipMeat: "Carne",
+      chipSeafood: "Del Mar",
+      chipCuban: "Cubano",
+      chipBaking: "Horniar",
+      chipFewIngredients: "Pocos ingredientes",
+      
       // match same keys with Spanish versions
     }
   };
