--- a/index.html
+++ b/index.html
@@ -123,9 +123,17 @@
     <aside class="sidebar">
       <div class="logo">Gaby's Menu</div>
       <div class="side-nav">
-        <button class="side-btn transparent" title="Home" aria-label="Home">Home</button>
-        <button class="side-btn transparent" title="Search" aria-label="Search">Search</button>
-        <button class="side-btn transparent" title="The App" aria-label="The App">Videos</button>
+        <ul class="navbar-list">
+
+          <li class="navbar-item">
+            <button class="navbar-link  active" data-nav-link>Home</button>
+          </li>
+          <li class="navbar-item">
+            <button class="navbar-link  active" data-nav-link>Search</button>
+          </li>
+          <li class="navbar-item">
+            <button class="navbar-link  active" data-nav-link>Videos</button>
+          </li>
 
         <ul class="social-list">
           
