--- a/index.html
+++ b/index.html
@@ -134,7 +134,9 @@
           <li class="navbar-item">
             <button class="navbar-link  active" data-nav-link>Videos</button>
           </li>
-
+        <button class="side-btn transparent" title="Home" aria-label="Home">Home</button>
+        <button class="side-btn transparent" title="Search" aria-label="Search">Search</button>
+        <button class="side-btn transparent" title="The App" aria-label="The App">Videos</button>
         <ul class="social-list">
           
         <li class="social-item">
