--- a/index.html
+++ b/index.html
@@ -135,11 +135,15 @@
             <button class="navbar-link  active" data-nav-link>Videos</button>
           </li>
         <button class="side-btn transparent" title="Home" aria-label="Home">Home</button>
-        <button class="side-btn transparent" title="Search" aria-label="Search">Search</button>
-        <button class="side-btn transparent" title="The App" aria-label="The App">Videos</button>
+        <button class="side-btn transparent" title="Recipes" aria-label="Recipes">Recipes</button>
+        <button class="side-btn transparent" title="Videos" aria-label="Videos">Videos</button>
         <ul class="social-list">
           
-        <li class="social-item">
+        <div class="separator"></div>
+
+        <ul class="social-list">
+
+          <li class="social-item">
             <a href="#" class="social-link">
               <ion-icon name="logo-tiktok"></ion-icon>
             </a>
