--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
           <li class="navbar-item">
             <button class="navbar-link  active" data-nav-link>Videos</button>
           </li>
-        <button class="side-btn transparent" title="Home" aria-label="Home">Home</button>
-        <button class="side-btn transparent" title="Recipes" aria-label="Recipes">Recipes</button>
-        <button class="side-btn transparent" title="Videos" aria-label="Videos">Videos</button>
+        <button class="side-btn" title="Home" aria-label="Home">Home</button>
+        <button class="side-btn" title="Recipes" aria-label="Recipes">Recipes</button>
+        <button class="side-btn" title="Videos" aria-label="Videos">Videos</button>
         <ul class="social-list">
           
         <div class="separator"></div>
@@ -181,14 +181,13 @@
       <section class="grid">
         <!-- HERO / Featured left card -->
         <article class="card hero tall">
-          <span class="badge">CREAMY</span>
-          <img class="media" src="https://images.unsplash.com/photo-1526318472351-c75fcf070305?q=80&w=1400&auto=format&fit=crop" alt="Heart of Palm & Plantain Moqueca"/>
+          <span class="badge">Meals</span>
+          <img class="media" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.bbcgoodfood.com%2Frecipes%2Fcollection%2Feasy-recipes&psig=AOvVaw3cwc39npzP6ZS9M5fAsOB8&ust=1759185928970000&source=images&cd=vfe&opi=89978449&ved=0CBYQjRxqFwoTCNibxLbE_I8DFQAAAAAdAAAAABAE" alt="Recipe Name"/>
           <div class="overlay">
-            <h3 class="title" id="hero-title">Heart of Palm & Plantain Moqueca</h3>
+            <h3 class="title" id="hero-title">Recipe name</h3>
             <div class="meta">
               <span class="pill">Level: Basic</span>
-              <span class="pill">Overall: 30m</span>
-              <span class="pill">Ready: 9:53am</span>
+              <span class="pill">30m</span>
             </div>
           </div>
         </article>
@@ -322,7 +321,7 @@
       // add more keys for every text you want translated
     },
     es: {
-      heroTitle: "Moqueca de Palmito y Plátano",
+      heroTitle: "No se",
       chipForYou: "Para ti",
       chipQuick: "Rápido",
       chipMeals: "Platos",
