--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
           <div class="overlay">
             <h3 class="title" id="hero-title">Recipe name</h3>
             <div class="meta">
+              <span class="pill">NEW</span>
               <span class="pill">Level: Basic</span>
               <span class="pill">30m</span>
             </div>
@@ -192,101 +193,101 @@
 
         <!-- Regular cards -->
         <article class="card featured">
-          <img class="media" src="https://images.unsplash.com/photo-1470337458703-46ad1756a187?q=80&w=1200&auto=format&fit=crop" alt="Quick Takuan"/>
+          <img class="media" src="https://images.unsplash.com/photo-1470337458703-46ad1756a187?q=80&w=1200&auto=format&fit=crop" alt="Another recipe"/>
           <div class="body">
-            <div class="meta" style="margin-bottom:6px"><span class="pill">NEW</span><span class="pill">14+</span></div>
-            <div class="title">Quick Takuan</div>
+            <div class="meta" style="margin-bottom:6px"><span class="pill">Level: Med</span><span class="pill">14m</span></div>
+            <div class="title">Another recipe</div>
             <div class="meta"><span>Prep 15m</span></div>
           </div>
         </article>
 
         <article class="card featured">
-          <img class="media" src="https://images.unsplash.com/photo-1473091534298-04dcbce3278c?q=80&w=1200&auto=format&fit=crop" alt="Blue Cheese Dressing"/>
+          <img class="media" src="https://images.unsplash.com/photo-1473091534298-04dcbce3278c?q=80&w=1200&auto=format&fit=crop" alt="Anotherrrr"/>
           <div class="body">
-            <div class="meta" style="margin-bottom:6px"><span class="pill">NEW</span><span class="pill">15m</span></div>
-            <div class="title">Blue Cheese Dressing</div>
+            <div class="meta" style="margin-bottom:6px"><span class="pill">Level: Hard</span><span class="pill">15m</span></div>
+            <div class="title">Anotherrrr</div>
             <div class="meta"><span>Dip • Salad</span></div>
           </div>
         </article>
 
         <article class="card featured">
-          <img class="media" src="https://images.unsplash.com/photo-1543332164-6e82f355bad8?q=80&w=1200&auto=format&fit=crop" alt="Roasted Lamb"/>
+          <img class="media" src="https://images.unsplash.com/photo-1543332164-6e82f355bad8?q=80&w=1200&auto=format&fit=crop" alt="Maybe Yucca Fries"/>
           <div class="body">
-            <div class="meta" style="margin-bottom:6px"><span class="pill">NEW</span><span class="pill">5h+</span></div>
-            <div class="title">Roasted Lamb Shoulder & Potato</div>
+            <div class="meta" style="margin-bottom:6px"><span class="pill">Level: Med</span><span class="pill">5h</span></div>
+            <div class="title">Maybe Yucca Fries</div>
             <div class="meta"><span>Oven • Family</span></div>
           </div>
         </article>
 
         <article class="card featured">
-          <img class="media" src="https://images.unsplash.com/photo-1561089489-f13d5e730d72?q=80&w=1200&auto=format&fit=crop" alt="Egg‑Filled Pancake"/>
+          <img class="media" src="https://images.unsplash.com/photo-1561089489-f13d5e730d72?q=80&w=1200&auto=format&fit=crop" alt="LA la la"/>
           <div class="body">
-            <div class="meta" style="margin-bottom:6px"><span class="pill">NEW</span><span class="pill">21m</span></div>
-            <div class="title">Egg‑Filled Pancake</div>
+            <div class="meta" style="margin-bottom:6px"><span class="pill">Level: Basic</span><span class="pill">21m</span></div>
+            <div class="title">LA la la</div>
             <div class="meta"><span>Breakfast</span></div>
           </div>
         </article>
 
         <article class="card featured">
-          <img class="media" src="https://images.unsplash.com/photo-1466637574441-749b8f19452f?q=80&w=1200&auto=format&fit=crop" alt="Salmon Tartare"/>
+          <img class="media" src="https://images.unsplash.com/photo-1466637574441-749b8f19452f?q=80&w=1200&auto=format&fit=crop" alt="JIJIJIJI"/>
           <div class="body">
-            <div class="meta" style="margin-bottom:6px"><span class="pill">NEW</span><span class="pill">30m</span></div>
-            <div class="title">Salmon Tartare</div>
+            <div class="meta" style="margin-bottom:6px"><span class="pill">Level: Basic</span><span class="pill">30m</span></div>
+            <div class="title">JIJIJIJI</div>
             <div class="meta"><span>Seafood • Fresh</span></div>
           </div>
         </article>
 
         <article class="card featured">
-          <img class="media" src="https://images.unsplash.com/photo-1604908554027-0e08ff6f7cf3?q=80&w=1200&auto=format&fit=crop" alt="Panettone"/>
+          <img class="media" src="https://images.unsplash.com/photo-1604908554027-0e08ff6f7cf3?q=80&w=1200&auto=format&fit=crop" alt="BLAH blah blah"/>
           <div class="body">
-            <div class="meta" style="margin-bottom:6px"><span class="pill">NEW</span><span class="pill">1d+</span></div>
-            <div class="title">Panettone</div>
+            <div class="meta" style="margin-bottom:6px"><span class="pill">Level: Med</span><span class="pill">1m</span></div>
+            <div class="title">BLAH blah blah</div>
             <div class="meta"><span>Dessert</span></div>
           </div>
         </article>
 
         <article class="card featured">
-          <img class="media" src="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?q=80&w=1200&auto=format&fit=crop" alt="Grilled Cabbage"/>
+          <img class="media" src="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?q=80&w=1200&auto=format&fit=crop" alt="Looks so cuteee"/>
           <div class="body">
-            <div class="meta" style="margin-bottom:6px"><span class="pill">NEW</span><span class="pill">1h+</span></div>
-            <div class="title">Grilled Cabbage, Seaweed & Strawberries</div>
+            <div class="meta" style="margin-bottom:6px"><span class="pill">Level: Med</span><span class="pill">1h</span></div>
+            <div class="title">Looks so cuteee</div>
             <div class="meta"><span>Vegetarian</span></div>
           </div>
         </article>
 
         <article class="card featured">
-          <img class="media" src="https://images.unsplash.com/photo-1582101031075-b0a91a8a43b6?q=80&w=1200&auto=format&fit=crop" alt="Frozen Margarita"/>
+          <img class="media" src="https://images.unsplash.com/photo-1582101031075-b0a91a8a43b6?q=80&w=1200&auto=format&fit=crop" alt="Oh my goodness"/>
           <div class="body">
-            <div class="meta" style="margin-bottom:6px"><span class="pill">NEW</span><span class="pill">5m</span></div>
-            <div class="title">Frozen Margarita</div>
+            <div class="meta" style="margin-bottom:6px"><span class="pill">Level: Hard</span><span class="pill">5m</span></div>
+            <div class="title">Oh my goodness</div>
             <div class="meta"><span>Cocktail</span></div>
           </div>
         </article>
 
         <!-- Add a few more generic cards to fill grid -->
         <article class="card featured">
-          <img class="media" src="https://images.unsplash.com/photo-1504674900247-0877df9cc836?q=80&w=1200&auto=format&fit=crop" alt="Pasta"/>
+          <img class="media" src="https://images.unsplash.com/photo-1504674900247-0877df9cc836?q=80&w=1200&auto=format&fit=crop" alt="IDK"/>
           <div class="body">
-            <div class="meta" style="margin-bottom:6px"><span class="pill">POPULAR</span><span class="pill">30m</span></div>
-            <div class="title">Tomato Basil Pasta</div>
+            <div class="meta" style="margin-bottom:6px"><span class="pill">Level: Basic</span><span class="pill">30m</span></div>
+            <div class="title">IDK</div>
             <div class="meta"><span>Dinner</span></div>
           </div>
         </article>
 
         <article class="card featured">
-          <img class="media" src="https://images.unsplash.com/photo-1512621776951-a57141f2eefd?q=80&w=1200&auto=format&fit=crop" alt="Salad"/>
+          <img class="media" src="https://images.unsplash.com/photo-1512621776951-a57141f2eefd?q=80&w=1200&auto=format&fit=crop" alt="Rlly idk"/>
           <div class="body">
-            <div class="meta" style="margin-bottom:6px"><span class="pill">VEGAN</span><span class="pill">15m</span></div>
-            <div class="title">Super Green Salad</div>
+            <div class="meta" style="margin-bottom:6px"><span class="pill">Level: Hard</span><span class="pill">15m</span></div>
+            <div class="title">Rlly idk</div>
             <div class="meta"><span>Lunch</span></div>
           </div>
         </article>
 
         <article class="card featured">
-          <img class="media" src="https://images.unsplash.com/photo-1526312426976-593c2ebcce75?q=80&w=1200&auto=format&fit=crop" alt="Soup"/>
+          <img class="media" src="https://images.unsplash.com/photo-1526312426976-593c2ebcce75?q=80&w=1200&auto=format&fit=crop" alt="kya whoopa"/>
           <div class="body">
-            <div class="meta" style="margin-bottom:6px"><span class="pill">COZY</span><span class="pill">45m</span></div>
-            <div class="title">Miso Mushroom Soup</div>
+            <div class="meta" style="margin-bottom:6px"><span class="pill">Level: Med</span><span class="pill">45m</span></div>
+            <div class="title">kya whoopa</div>
             <div class="meta"><span>Dinner</span></div>
           </div>
         </article>
