--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
           <div class="body">
             <div class="meta" style="margin-bottom:6px"><span class="pill">Level: Med</span><span class="pill">14m</span></div>
             <div class="title">Another recipe</div>
-            <div class="meta"><span>Prep 15m</span></div>
+            <div class="meta"><span>Baking</span></div>
           </div>
         </article>
 
@@ -206,7 +206,7 @@
           <div class="body">
             <div class="meta" style="margin-bottom:6px"><span class="pill">Level: Hard</span><span class="pill">15m</span></div>
             <div class="title">Anotherrrr</div>
-            <div class="meta"><span>Dip • Salad</span></div>
+            <div class="meta"><span>Seafood</span></div>
           </div>
         </article>
 
@@ -215,7 +215,7 @@
           <div class="body">
             <div class="meta" style="margin-bottom:6px"><span class="pill">Level: Med</span><span class="pill">5h</span></div>
             <div class="title">Maybe Yucca Fries</div>
-            <div class="meta"><span>Oven • Family</span></div>
+            <div class="meta"><span>Meal</span></div>
           </div>
         </article>
 
@@ -224,7 +224,7 @@
           <div class="body">
             <div class="meta" style="margin-bottom:6px"><span class="pill">Level: Basic</span><span class="pill">21m</span></div>
             <div class="title">LA la la</div>
-            <div class="meta"><span>Breakfast</span></div>
+            <div class="meta"><span>Baking</span></div>
           </div>
         </article>
 
@@ -233,7 +233,7 @@
           <div class="body">
             <div class="meta" style="margin-bottom:6px"><span class="pill">Level: Basic</span><span class="pill">30m</span></div>
             <div class="title">JIJIJIJI</div>
-            <div class="meta"><span>Seafood • Fresh</span></div>
+            <div class="meta"><span>Seafood</span></div>
           </div>
         </article>
 
@@ -242,7 +242,7 @@
           <div class="body">
             <div class="meta" style="margin-bottom:6px"><span class="pill">Level: Med</span><span class="pill">1m</span></div>
             <div class="title">BLAH blah blah</div>
-            <div class="meta"><span>Dessert</span></div>
+            <div class="meta"><span>Cuban</span></div>
           </div>
         </article>
 
@@ -251,7 +251,7 @@
           <div class="body">
             <div class="meta" style="margin-bottom:6px"><span class="pill">Level: Med</span><span class="pill">1h</span></div>
             <div class="title">Looks so cuteee</div>
-            <div class="meta"><span>Vegetarian</span></div>
+            <div class="meta"><span>Meat</span></div>
           </div>
         </article>
 
@@ -260,7 +260,7 @@
           <div class="body">
             <div class="meta" style="margin-bottom:6px"><span class="pill">Level: Hard</span><span class="pill">5m</span></div>
             <div class="title">Oh my goodness</div>
-            <div class="meta"><span>Cocktail</span></div>
+            <div class="meta"><span>Meat</span></div>
           </div>
         </article>
 
@@ -270,7 +270,7 @@
           <div class="body">
             <div class="meta" style="margin-bottom:6px"><span class="pill">Level: Basic</span><span class="pill">30m</span></div>
             <div class="title">IDK</div>
-            <div class="meta"><span>Dinner</span></div>
+            <div class="meta"><span>Few Ingredients</span></div>
           </div>
         </article>
 
@@ -279,7 +279,7 @@
           <div class="body">
             <div class="meta" style="margin-bottom:6px"><span class="pill">Level: Hard</span><span class="pill">15m</span></div>
             <div class="title">Rlly idk</div>
-            <div class="meta"><span>Lunch</span></div>
+            <div class="meta"><span>Meal</span></div>
           </div>
         </article>
 
@@ -288,7 +288,7 @@
           <div class="body">
             <div class="meta" style="margin-bottom:6px"><span class="pill">Level: Med</span><span class="pill">45m</span></div>
             <div class="title">kya whoopa</div>
-            <div class="meta"><span>Dinner</span></div>
+            <div class="meta"><span>Baking</span></div>
           </div>
         </article>
 
