--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <!-- HERO / Featured left card -->
         <article class="card hero tall">
           <span class="badge">Meals</span>
-          <img class="media" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.bbcgoodfood.com%2Frecipes%2Fcollection%2Feasy-recipes&psig=AOvVaw3cwc39npzP6ZS9M5fAsOB8&ust=1759185928970000&source=images&cd=vfe&opi=89978449&ved=0CBYQjRxqFwoTCNibxLbE_I8DFQAAAAAdAAAAABAE" alt="Recipe Name"/>
+          <img class="media" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.foodandwine.com%2Frecipes%2Fpasta-sausage-basil-and-mustard&psig=AOvVaw3cwc39npzP6ZS9M5fAsOB8&ust=1759185928970000&source=images&cd=vfe&opi=89978449&ved=0CBYQjRxqFwoTCNibxLbE_I8DFQAAAAAdAAAAABAK" alt="Recipe Name"/>
           <div class="overlay">
             <h3 class="title" id="hero-title">Recipe name</h3>
             <div class="meta">
@@ -193,7 +193,7 @@
 
         <!-- Regular cards -->
         <article class="card featured">
-          <img class="media" src="https://images.unsplash.com/photo-1470337458703-46ad1756a187?q=80&w=1200&auto=format&fit=crop" alt="Another recipe"/>
+          <img class="media" src="https://assets.epicurious.com/photos/63ea6ba855007bc33c26ba0b/1:1/w_2560%2Cc_limit/Shakshuka_RECIPE_020923_47096.jpg" alt="Another recipe"/>
           <div class="body">
             <div class="meta" style="margin-bottom:6px"><span class="pill">Level: Med</span><span class="pill">14m</span></div>
             <div class="title">Another recipe</div>
@@ -202,7 +202,7 @@
         </article>
 
         <article class="card featured">
-          <img class="media" src="https://images.unsplash.com/photo-1473091534298-04dcbce3278c?q=80&w=1200&auto=format&fit=crop" alt="Anotherrrr"/>
+          <img class="media" src="https://images.immediate.co.uk/production/volatile/sites/30/2022/08/Fish-Tacos-1337495.jpg?quality=90&resize=708,643" alt="Anotherrrr"/>
           <div class="body">
             <div class="meta" style="margin-bottom:6px"><span class="pill">Level: Hard</span><span class="pill">15m</span></div>
             <div class="title">Anotherrrr</div>
@@ -238,7 +238,7 @@
         </article>
 
         <article class="card featured">
-          <img class="media" src="https://images.unsplash.com/photo-1604908554027-0e08ff6f7cf3?q=80&w=1200&auto=format&fit=crop" alt="BLAH blah blah"/>
+          <img class="media" src="https://www.foodandwine.com/thmb/1ugIsIc8YmdH23pDSTfb0bTgB38=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/Sauteed-Rainbow-Chard-with-Garlic-and-Lemon-FT-RECIPE0924-a79bec7a0d2949d0a29e6967f68e4d87.jpg" alt="BLAH blah blah"/>
           <div class="body">
             <div class="meta" style="margin-bottom:6px"><span class="pill">Level: Med</span><span class="pill">1m</span></div>
             <div class="title">BLAH blah blah</div>
