--- a/index.html
+++ b/index.html
@@ -325,9 +325,15 @@
   <script>
   const translations = {
     en: {
-      heroTitle: "Heart of Palm & Plantain Moqueca",
+      heroTitle: "Recipe Name",
       chipForYou: "For you",
       chipQuick: "Quick",
+      chipMeals: "Meal",
+      chipMeat: "Meat",
+      chipSeafood: "Seafood",
+      chipCuban: "Cuban",
+      chipBaking: "Baking",
+      chipFewIngredients: "Few Ingredients",
       // add more keys for every text you want translated
     },
     es: {
