--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
     }
     .transparent-button {
       background-color: transparent; /* Makes the button's background fully transparent */
-      border: 1px solid #ccc; /* Optional: Adds a subtle border for definition */
-      color: #333; /* Sets the text color to be visible */
+      color: #ffffff; /* Sets the text color to be visible */
       padding: 10px 20px; /* Adjust padding as needed */
       font-size: 16px; /* Adjust font size as needed */
       cursor: pointer; /* Changes the cursor to a pointer on hover */
