--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
       heroTitle: "Recipe Name",
       chipForYou: "For you",
       chipQuick: "Quick",
-      chipMeals: "Meal",
+      chipMeals: "Meals",
       chipMeat: "Meat",
       chipSeafood: "Seafood",
       chipCuban: "Cuban",
