--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           </li>
       </ul>
       <div class="side-spacer"></div>
-      <div class="side-small" id="lang-toggle">EN</div>
+      <div class="side-large" id="lang-toggle">EN</div>
     </aside>
 
     <!-- ===== Header ===== -->
