--- a/index.html
+++ b/index.html
@@ -54,11 +54,9 @@
     .transparent-button {
       background-color: transparent; /* Makes the button's background fully transparent */
       color: #ffffff; /* Sets the text color to be visible */
+      padding: 10px 20px; /* Adjust padding as needed */
       font-size: 16px; /* Adjust font size as needed */
       cursor: pointer; /* Changes the cursor to a pointer on hover */
-  }
-    .transparent-button:hover {
-      background-color: rgba(0, 0, 0, 0.1); /* Optional: Adds a subtle hover effect */
   }
     .bar{display:flex; align-items:center; gap:14px; padding:14px 20px}
     .search{
