--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
     <aside class="sidebar">
       <div class="logo">Gaby's Menu</div>
       <div class="side-nav">
+        <a href="https://gdelcsan.github.io/Gabysmenu/">Home</a>        
         <button class="transparent-button" id="chip-home">Home</button>
         <button class="transparent-button" id="chip-recipes">Recipes</button>
         <button class="transparent-button">Videos</button>
