--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         </article>
 
         <article class="card featured">
-          <img class="media" src="https://images.unsplash.com/photo-1543332164-6e82f355bad8?q=80&w=1200&auto=format&fit=crop" alt="Maybe Yucca Fries"/>
+          <img class="media" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.twincities.com%2F2023%2F01%2F12%2Frecipes-weeknight-dishes-your-kids-will-love%2F&psig=AOvVaw2-Unj-MZKERyiS9MhxcWZn&ust=1759251419963000&source=images&cd=vfe&opi=89978449&ved=0CBYQjRxqFwoTCPC2p7K4_o8DFQAAAAAdAAAAABAV" alt="Maybe Yucca Fries"/>
           <div class="body">
             <div class="meta" style="margin-bottom:6px"><span class="pill">Level: Med</span><span class="pill">5h</span></div>
             <div class="title">Maybe Yucca Fries</div>
