--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
     <aside class="sidebar">
       <div class="logo">Gaby's Menu</div>
       <div class="side-nav">
-        <a href="https://gdelcsan.github.io/Gabysmenu/" id="chip-home"><p style="text-align:center">Home</a>   
-        <a href="https://gdelcsan.github.io/Gabysmenu/" id="chip-recipes"><p style="text-align:center">Recipes</a>
-        <a href="https://gdelcsan.github.io/Gabysmenu/"><p style="text-align:center">Videos</a>
+        <a href="https://gdelcsan.github.io/Gabysmenu/" id="chip-home"><p style="text-align:left">Home</a>   
+        <a href="#" id="chip-recipes"><p style="text-align:left">Recipes</a>
+        <a href="#"><p style="text-align:left">Videos</a>
         <button class="transparent-button" id="chip-home">Home</button>
         <button class="transparent-button" id="chip-recipes">Recipes</button>
         <button class="transparent-button">Videos</button>
