--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <style>
     :root{
-      --bg: #0b0b0d;         /* page background */
+      --bg: #e4dcce;         /* page background */
       --panel: #131316;      /* cards & header */
       --soft: #1b1b1f;       /* subtle surfaces */
       --text: #f5f6f7;       /* primary text */
