--- a/index.html
+++ b/index.html
@@ -187,10 +187,10 @@
 
         <!-- Regular cards -->
         <article class="card featured">
-          <img class="media" src="https://assets.epicurious.com/photos/63ea6ba855007bc33c26ba0b/1:1/w_2560%2Cc_limit/Shakshuka_RECIPE_020923_47096.jpg" alt="Another recipe"/>
+          <img class="media" src="./guavapie.png" alt="Guava Pie"/>
           <div class="body">
             <div class="meta" style="margin-bottom:6px"><span class="pill">Level: Med</span><span class="pill">14m</span></div>
-            <div class="title">Another recipe</div>
+            <div class="title">Guava Pie</div>
             <div class="meta"><span>Baking</span></div>
           </div>
         </article>
