--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <h3 class="title" id="hero-title">Recipe name</h3>
             <div class="meta">
               <span class="pill">NEW</span>
-              <span class="pill">Level: Basic</span>
+              <span class="pill">Level: Med</span>
               <span class="pill">30m</span>
             </div>
           </div>
@@ -189,7 +189,7 @@
         <article class="card featured">
           <img class="media" src="./guavapie.png" alt="Guava Pie"/>
           <div class="body">
-            <div class="meta" style="margin-bottom:6px"><span class="pill">Level: Med</span><span class="pill">14m</span></div>
+            <div class="meta" style="margin-bottom:6px"><span class="pill">Level: Easy</span><span class="pill">1h</span></div>
             <div class="title" id="chip-GuavaPie">Guava Pie</div>
             <div class="meta"><span>Baking</span></div>
           </div>
