--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
     <aside class="sidebar">
       <div class="logo">Gaby's Menu</div>
       <div class="side-nav">
-        <a href="https://gdelcsan.github.io/Gabysmenu/" id="chip-home"><p style="text-align:left">Home</a>   
-        <a href="#" id="chip-recipes"><p style="text-align:left">Recipes</a>
+        <a href="https://gdelcsan.github.io/Gabysmenu/" id="chip-home"><p style="text-align:center">Home</a>   
+        <a href="#" id="chip-recipes"><p style="text-align:center">Recipes</a>
         <a href="#"><p style="text-align:left">Videos</a>
         
       </div>
@@ -143,7 +143,6 @@
             </a>
           </li>
       </ul>
-      <div class="side-spacer"></div>
       <div class="side-large" id="lang-toggle">EN</div>
     </aside>
 
