--- a/index.html
+++ b/index.html
@@ -130,12 +130,14 @@
     <aside class="sidebar">
       <div class="logo">Gaby's Menu</div>
       <div class="side-nav">
-        <a href="https://gdelcsan.github.io/Gabysmenu/" id="chip-home"><p style="text-align:center">Home</a>   
-        <a href="#" id="chip-recipes"><p style="text-align:center">Recipes</a>
-        <a href="#"><p style="text-align:left">Videos</a>
+        <a href="https://gdelcsan.github.io/Gabysmenu/" id="chip-home"><p style="text-align: left">Home</a>   
+        <a href="#" id="chip-recipes"><p style="text-align: left">Recipes</a>
+        <a href="#"><p style="text-align: left">Videos</a>
         
       </div>
-      <ul class="social-list">
+      
+      <div class="side-spacer"></div>
+       <ul class="social-list">
 
           <li class="social-item">
             <a href="#" class="social-link">
@@ -150,7 +152,7 @@
     <header class="top">
       <div class="bar">
         <div class="search" role="search">
-          <svg class="icon" viewBox="0 0 12 24" fill="none" stroke="currentColor" stroke-width="1.5"><circle cx="11" cy="11" r="7"/><path d="M20 20L17 17"/></svg>
+          <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><circle cx="11" cy="11" r="7"/><path d="M20 20L17 17"/></svg>
           <input placeholder="What's cooking?" />
           <div class="pill" aria-hidden>⌘K</div>
         </div>
