--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
           <li class="social-item">
             <a href="#" class="social-link">
-              <ion-icon name="logo-tiktok"></ion-icon>
+              <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
       </ul>
