--- a/index.html
+++ b/index.html
@@ -95,11 +95,6 @@
     .hero .overlay{position:absolute; inset:auto 0 0 0; padding:16px; background:linear-gradient(180deg, transparent 0%, rgba(0,0,0,.75) 80%)}
     .badge{position:absolute; top:12px; left:12px; background:#0f1116dd; border:1px solid #2a2b32; backdrop-filter: blur(6px); color:#fff; padding:6px 8px; font-size:12px; border-radius:10px}
 
-    /* small round preview thumbnails under header */
-    .preview-row{display:flex; gap:12px; overflow:auto; padding:0 20px 6px}
-    .preview{width:48px; height:48px; border-radius:999px; overflow:hidden; border:2px solid #23262e; background:#15161b; flex: 0 0 auto}
-    .preview img{width:100%; height:100%; object-fit:cover}
-
     /* ===== Utilities ===== */
     .icon{width:22px; height:22px; opacity:.9}
     .icon.xs{width:18px; height:18px}
@@ -128,6 +123,9 @@
   <div class="app">
     <!-- ===== Sidebar ===== -->
     <aside class="sidebar">
+      <figure class="avatar-box">
+          <img src="./IMG_2196.jpg" alt="Gabriela del Cristo" width="80">
+        </figure>
       <div class="logo">Gaby's Menu</div>
       <div class="side-nav">
         <a href="https://gdelcsan.github.io/Gabysmenu/" id="chip-home"><p style="text-align: left">Home</a>   
