--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <!-- ===== Sidebar ===== -->
     <aside class="sidebar">
       <figure class="avatar-box">
-          <img src="./IMG_2196.jpg" alt="Gabriela del Cristo" width="80">
+          <img src="./logoo.png" alt="logo" width="80">
         </figure>
       <div class="logo">Gaby's Menu</div>
       <div class="side-nav">
