--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </figure>
       <div class="logo">Gaby's Menu</div>
       <div class="side-nav">
-        <a href="https://gdelcsan.github.io/Gabysmenu/" id="chip-home"><p style="text-align: left">Home</a>   
+        <a href="https://gdelcsan.github.io/Gabysmenu/" id="chip-home">Home</a>   
         <a href="#" id="chip-recipes"><p style="text-align: left">Recipes</a>
         <a href="#"><p style="text-align: left">Videos</a>
         
