--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
     <!-- ===== Sidebar ===== -->
     <aside class="sidebar">
       <figure class="avatar-box">
-          <img src="./logoo.png" alt="logo" width="80">
+          <img src="./logoo.png" alt="logo" width="100">
         </figure>
       <div class="logo">Gaby's Menu</div>
       <div class="side-nav">
         <a href="https://gdelcsan.github.io/Gabysmenu/" id="chip-home">Home</a>   
-        <a href="#" id="chip-recipes"><p style="text-align: left">Recipes</a>
+        <a href="#" id="chip-recipes">Recipes</a>
         <a href="#"><p style="text-align: left">Videos</a>
         
       </div>
